@@ -2,6 +2,9 @@
 	- Fix to use event_assign with libevent for thread-safety.
 	- verbose information about auth zone lookup process, also lookup
 	  start, timeout and fail.
+	- Fix #17: Add python module example from Jan Janak, that is a
+	  plugin for the Unbound DNS resolver to resolve DNS records in
+	  multicast DNS [RFC 6762] via Avahi.
 
 5 April 2019: Wouter
 	- Fix to reinit event structure for accepted TCP (and TLS) sockets.
